--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@cosmjs/proto-signing": "^0.32.3",
     "@cosmjs/stargate": "^0.32.3",
     "@cosmjs/tendermint-rpc": "^0.32.3",
-    "@idena/vrf-js": "^1.0.1",
     "@keplr-wallet/types": "^0.12.80",
     "@leapwallet/cosmos-snap-provider": "^0.1.26",
     "@lionello/secp256k1-js": "^1.1.0",
     "bignumber.js": "^9.1.2",
+    "bn.js": "^5.2.1",
     "cosmjs-types": "^0.9.0",
     "crypto-js": "^4.2.0",
+    "elliptic": "^6.5.5",
     "stream-browserify": "^3.0.0",
     "ws": "^7.5.9"
   },
